parserGenerator/test/pascal_grammar.ebnf
(* a simple program syntax in EBNF − Wikipedia *)
program = 'PROGRAM', whitespace, identifier, whitespace,
           'BEGIN', whitespace,
           { assignment, ";", whitespace },
           'END.' ;
identifier = alphabeticCharacter, { alphabeticCharacter | digit } ;
number = [ "-" ], digit, { digit } ;
string = '"' , { allCharacters - '"' }, '"' ;
assignment = identifier , ":=" , ( number | identifier | string ) ;
alphabeticCharacter = "A" | "B" | "C" | "D" | "E" | "F" | "G"
                     | "H" | "I" | "J" | "K" | "L" | "M" | "N"
                     | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
                     | "V" | "W" | "X" | "Y" | "Z" ;
digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
whitespace = ? white_space_characters ? ;
allCharacters = ? all_visible_characters ? ;
